lcd1602_i2c_display/build/log/idf_py_stdout_output_7468
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Espressif\frameworks\esp-idf-v5.0.1\workspace\lcd1602_i2c_display_waveshare\build\bootloader\esp-idf\esptool_py && python C:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/build/bootloader/bootloader.bin"
Bootloader binary size 0x4ee0 bytes. 0x3120 bytes (38%) free.
[2/9] Building C object esp-idf/Waveshare_LCD1602/CMakeFiles/__idf_Waveshare_LCD1602.dir/Waveshare_LCD1602.c.obj
FAILED: esp-idf/Waveshare_LCD1602/CMakeFiles/__idf_Waveshare_LCD1602.dir/Waveshare_LCD1602.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-2022r1-11.2.0\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe  -IC:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/build/config -IC:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32c3/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -march=rv32imc  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/Waveshare_LCD1602/CMakeFiles/__idf_Waveshare_LCD1602.dir/Waveshare_LCD1602.c.obj -MF esp-idf\Waveshare_LCD1602\CMakeFiles\__idf_Waveshare_LCD1602.dir\Waveshare_LCD1602.c.obj.d -o esp-idf/Waveshare_LCD1602/CMakeFiles/__idf_Waveshare_LCD1602.dir/Waveshare_LCD1602.c.obj -c C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c: In function 'Waveshare_LCD1602_init':
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c:30:5: error: implicit declaration of function 'Waveshare_LCD1602_begin'; did you mean 'Waveshare_LCD1602_blink'? [-Werror=implicit-function-declaration]
   30 |     Waveshare_LCD1602_begin(lcd);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     Waveshare_LCD1602_blink
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c: At top level:
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c:35:11: error: conflicting types for 'Waveshare_LCD1602_begin'; have 'esp_err_t(Waveshare_LCD1602_t *, uint8_t,  uint8_t)' {aka 'int(Waveshare_LCD1602_t *, unsigned char,  unsigned char)'}
   35 | esp_err_t Waveshare_LCD1602_begin(Waveshare_LCD1602_t *lcd, uint8_t cols, uint8_t lines) {
      |           ^~~~~~~~~~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c:35:1: note: an argument type that has a default promotion cannot match an empty parameter name list declaration
   35 | esp_err_t Waveshare_LCD1602_begin(Waveshare_LCD1602_t *lcd, uint8_t cols, uint8_t lines) {
      | ^~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.0.1/workspace/lcd1602_i2c_display_waveshare/components/Waveshare_LCD1602/Waveshare_LCD1602.c:30:5: note: previous implicit declaration of 'Waveshare_LCD1602_begin' with type 'int()'
   30 |     Waveshare_LCD1602_begin(lcd);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
